Updated weblistener build

--- a/terraform/templates/weblistener.service
+++ b/terraform/templates/weblistener.service
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 User=${os_user}
 WorkingDirectory=/home/${os_user}
-ExecStart=/home/${os_user}/listener.py
+ExecStart=/home/${os_user}/weblistener.py
 Restart=always
 
 [Install]
