Initial commit of vagrant testing branch
Signed-off-by: Jim Quilty <jquilty@chef.io>

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -23,4 +23,5 @@ suites:
   - name: default
     verifier:
       inspec_tests:
-        - test/integration/default
+        - name: dev-sec/linux-baseline
+          url: https://github.com/dev-sec/linux-baseline
