--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,6 +1,6 @@
 ---
 driver:
-  name: dokken
+  name: docker
   
 provisioner:
   hosts: test-kitchen
@@ -17,7 +17,10 @@ verifier:
   name: inspec
 
 platforms:
-  - name: centos-7
+  - name: windows
+    driver_config:
+      image: mcr.microsoft.com/windows
+      platform: windows
 
 suites:
   - name: default
