Updated site.yml file
Signed-off-by: Jim Quilty <jquilty@chef.io>

--- a/site.yml
+++ b/site.yml
@@ -1,7 +1,7 @@
 - hosts: test-kitchen
   tasks:
-    # - name: Update yum cache
-    #   yum: update_cache=true
+    - name: Update yum cache
+      yum: update_cache=true
     - name: Install necessary packages
       yum:
         pkg: httpd
